--- a/seasonal-offers.json
+++ b/seasonal-offers.json
@@ -1,12 +1,12 @@
 [
   {
   "offer_name" :"End of Year Sale",
-  "offer_image" :"https://firebasestorage.googleapis.com/v0/b/imagestoreapi-735b2.appspot.com/o/a15-1.jpeg?alt=media&token=40772d29-a837-43c2-9ab3-6d3183cd5663&_gl=1*1x5bqoj*_ga*ODcxMTQ1NjA5LjE2OTg3NDEyMDY.*_ga_CW55HF8NVT*MTY5OTI0NjA4My4xNy4wLjE2OTkyNDYwODMuNjAuMC4w",
+  "offer_image" :"https://firebasestorage.googleapis.com/v0/b/imageapi-ecom.appspot.com/o/year-end-sale-poster-design-600w-1566177001.jpg?alt=media&token=205b3622-b67f-46d9-b5b9-7f699216cda3",
   "offer_text" :"Grab before year ends"
 },
   {
   "offer_name" :"End of Year Sale",
-  "offer_image" :"https://firebasestorage.googleapis.com/v0/b/imagestoreapi-735b2.appspot.com/o/a15-1.jpeg?alt=media&token=40772d29-a837-43c2-9ab3-6d3183cd5663&_gl=1*1x5bqoj*_ga*ODcxMTQ1NjA5LjE2OTg3NDEyMDY.*_ga_CW55HF8NVT*MTY5OTI0NjA4My4xNy4wLjE2OTkyNDYwODMuNjAuMC4w",
+  "offer_image" :"https://firebasestorage.googleapis.com/v0/b/imageapi-ecom.appspot.com/o/year-end-sale-poster-design-600w-1566177001.jpg?alt=media&token=205b3622-b67f-46d9-b5b9-7f699216cda3",
   "offer_text" :"Grab before year ends"
 }
 ]
