--- a/seasonal-offers.json
+++ b/seasonal-offers.json
@@ -1,8 +1,8 @@
 [
   {
-  "offer_name" :"End of Year Sale",
+  "offer_name" :"Christmas Sale",
   "offer_image" :"https://firebasestorage.googleapis.com/v0/b/imageapi-ecom.appspot.com/o/year-end-sale-poster-design-600w-1566177001.jpg?alt=media&token=205b3622-b67f-46d9-b5b9-7f699216cda3",
-  "offer_text" :"Grab before year ends"
+  "offer_text" :"Ho Ho Ho..Dont wait for Santa to give gifts. Shop Now"
 },
   {
   "offer_name" :"End of Year Sale",
