--- a/seasonal-offers.json
+++ b/seasonal-offers.json
@@ -5,9 +5,9 @@
   "offer_text" :"New Year....New Beginings....New Products"
 },
   {
-  "offer_name" :"Republic Day Sale",
-  "offer_image" :"https://firebasestorage.googleapis.com/v0/b/imageapi-ecom.appspot.com/o/download.jpg?alt=media&token=cff396c8-db66-4001-98eb-0ed8049f597e",
-  "offer_text" :"Gift yourselves this republic day"
+  "offer_name" :"Clearance Sale",
+  "offer_image" :"https://firebasestorage.googleapis.com/v0/b/imageapi-ecom.appspot.com/o/clearance%20sale.jpg?alt=media&token=6e167e3f-e3c1-4937-982a-b1f1968ed2f1",
+  "offer_text" :"Grab before offer ends"
 }
 ]
 
